CStoreService reverted to 79e204c6ec187b1bd5222ae99814f6ce0fe07267 (GoogleCloudPlatform/better_logs Jul_17 2020)
package refactoring for CStore and CMove services. Part of tests
temporarily ignored.

ISender.csender renamed to cmove; CombinedSender added;

configureMultipleDestinationTypesMap and it unit added

old tests fixed: now works in Single mode; logic of retriesAmount
calculation changed: 1 send + flags.resent

multiple send to different destination types MODE added; old test fixed
after new logic adding;